	PR other/11673 	* mf-hooks2.c [WRAP_semctl]: Fix check for HAVE_UNION_SEMUN.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/tree-ssa-20020619-branch@69935 138bc75d-0d04-0410-961f-82ee72b054a4